--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
   <div class='hello-message'>
     <h1>Hi there!</h1>
     <h2>To get started, HOLD DOWN the space key for 3 seconds.</h2>
-    <h3>(or, on mobile, tap the cat!)</h3>
+    <h3>(or, on mobile, tap humpty dumpty!)</h3>
 
-    <img src='./cat-cute.jpg' alt='Cute cat' />
+    <img src='images.jpeg' alt='Humpty dumpty' />
   </div>
   <div class='logout-messages'></div>
 </template>
